--- a/home/css/home.css
+++ b/home/css/home.css
@@ -48,7 +48,7 @@ body {
     border-bottom: 1px solid var(--gray-200);
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 500;
 }
 
 .nav-container {
